--- a/assets/style/layout/_section3.scss
+++ b/assets/style/layout/_section3.scss
@@ -90,6 +90,10 @@
         background: $white;
         padding: 100px 0;
 
+        @media screen and (max-width : 769px) {
+            padding: 30px 0;
+        }
+
         &-container {
             max-width: 1080px;
             margin: 0 auto;
@@ -104,6 +108,12 @@
                 max-width: 700px;
             }
 
+            @media screen and (max-width : 769px) {
+                flex-direction: column;
+                margin-bottom: 5px;
+                max-width: 500px;
+            }
+
             &-box {
                 background: #F5F7F9;
                 padding: 26px 40px;
@@ -113,6 +123,11 @@
 
                 @media screen and (max-width : 1200px) {
                     padding: 26px 30px;
+                }
+
+                @media screen and (max-width : 769px) {
+                    margin-bottom: 20px;
+                    max-width: 700px;
                 }
 
                 &--2 {
@@ -156,8 +171,18 @@
                 max-width: 680px;
             }
 
+            @media screen and (max-width : 769px) {
+                flex-direction: column-reverse;
+                padding: 0 50px 50px;
+                max-width: 480px;
+            }
+
             &-textContent {
                 text-align: left;
+
+                @media screen and (max-width : 769px) {
+                    text-align: center;
+                }
 
                 h3 {
                     color: $blackf;
@@ -170,19 +195,27 @@
                     @media screen and (max-width : 1200px) {
                         max-width: 500px;
                     }
+
+                    @media screen and (max-width : 450px) {
+                        font-size: 2.2rem;
+                    }
                 }
 
                 p {
                     color: $blackf;
                     margin-bottom: 10px;
                     font-size: 1rem;
-                    font-weight: 600;
+                    font-weight: 500;
                     line-height: 1.4;
                     opacity: 0.8;
                     max-width: 590px;
 
                     @media screen and (max-width : 1200px) {
                         max-width: 500px;
+                    }
+
+                    @media screen and (max-width : 769px) {
+                        max-width: 550px;
                     }
                 }
 
@@ -202,6 +235,14 @@
                 overflow: hidden;
                 border-radius: 10px 0 0 10px;
                 background-size: cover;
+
+                @media screen and (max-width : 769px) {
+                    position: initial;
+                    width: 100%;
+                    height: 280px;
+                    border-radius: 10px;
+                    order: 1;
+                }
             }
         }
     }
@@ -231,7 +272,18 @@
                 opacity: 0;
                 transform: translate3D(0px, 100%, 0px);
                 transition: 0.2s;
-                // animation: useAnim 1.5s both;
+
+                @media screen and (max-width: 991px) {
+                    margin: 10px;
+                }
+
+                @media screen and (max-width: 768px) {
+                    margin: 15px;
+                }
+
+                @media screen and (max-width: 465px) {
+                    height: 20px;
+                }
 
                 @keyframes useAnim {
                     to {
