--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -86,7 +86,7 @@ li {
   position: fixed;
   top: 0;
   padding: 10px 0;
-  z-index: 100;
+  z-index: 1000;
   -webkit-backdrop-filter: saturate(180%) blur(20px);
           backdrop-filter: saturate(180%) blur(20px);
 }
@@ -1239,6 +1239,11 @@ li {
   background: #FFFFFF;
   padding: 100px 0;
 }
+@media screen and (max-width: 769px) {
+  .section-use__console {
+    padding: 30px 0;
+  }
+}
 .section-use__console-container {
   max-width: 1080px;
   margin: 0 auto;
@@ -1257,6 +1262,13 @@ li {
     max-width: 700px;
   }
 }
+@media screen and (max-width: 769px) {
+  .section-use__console-container {
+    flex-direction: column;
+    margin-bottom: 5px;
+    max-width: 500px;
+  }
+}
 .section-use__console-container-box {
   background: #F5F7F9;
   padding: 26px 40px;
@@ -1267,6 +1279,12 @@ li {
 @media screen and (max-width: 1200px) {
   .section-use__console-container-box {
     padding: 26px 30px;
+  }
+}
+@media screen and (max-width: 769px) {
+  .section-use__console-container-box {
+    margin-bottom: 20px;
+    max-width: 700px;
   }
 }
 .section-use__console-container-box--2 {
@@ -1307,8 +1325,20 @@ li {
     max-width: 680px;
   }
 }
+@media screen and (max-width: 769px) {
+  .section-use__console-bigBox {
+    flex-direction: column-reverse;
+    padding: 0 50px 50px;
+    max-width: 480px;
+  }
+}
 .section-use__console-bigBox-textContent {
   text-align: left;
+}
+@media screen and (max-width: 769px) {
+  .section-use__console-bigBox-textContent {
+    text-align: center;
+  }
 }
 .section-use__console-bigBox-textContent h3 {
   color: #111111;
@@ -1323,11 +1353,16 @@ li {
     max-width: 500px;
   }
 }
+@media screen and (max-width: 450px) {
+  .section-use__console-bigBox-textContent h3 {
+    font-size: 2.2rem;
+  }
+}
 .section-use__console-bigBox-textContent p {
   color: #111111;
   margin-bottom: 10px;
   font-size: 1rem;
-  font-weight: 600;
+  font-weight: 500;
   line-height: 1.4;
   opacity: 0.8;
   max-width: 590px;
@@ -1335,6 +1370,11 @@ li {
 @media screen and (max-width: 1200px) {
   .section-use__console-bigBox-textContent p {
     max-width: 500px;
+  }
+}
+@media screen and (max-width: 769px) {
+  .section-use__console-bigBox-textContent p {
+    max-width: 550px;
   }
 }
 .section-use__console-bigBox-textContent a {
@@ -1351,6 +1391,15 @@ li {
   overflow: hidden;
   border-radius: 10px 0 0 10px;
   background-size: cover;
+}
+@media screen and (max-width: 769px) {
+  .section-use__console-bigBox-img {
+    position: initial;
+    width: 100%;
+    height: 280px;
+    border-radius: 10px;
+    order: 1;
+  }
 }
 .section-use__partnairs {
   background: #FFFFFF;
@@ -1375,6 +1424,21 @@ li {
   opacity: 0;
   transform: translate3D(0px, 100%, 0px);
   transition: 0.2s;
+}
+@media screen and (max-width: 991px) {
+  .section-use__partnairs-logo img {
+    margin: 10px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .section-use__partnairs-logo img {
+    margin: 15px;
+  }
+}
+@media screen and (max-width: 465px) {
+  .section-use__partnairs-logo img {
+    height: 20px;
+  }
 }
 @-webkit-keyframes useAnim {
   to {
